# pico-workshop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blink.c  led-tester.c  main.c  onboard_led.c  pico_sdk_import.cmake
1-basic-programming/: CMakeLists.txt  serial-monitor-input.cpp  serial-monitor.cpp
2-basic-electronics/: CMakeLists.txt  adc-potentiometer.cpp  adc-temperature.cpp  blink-led.cpp  button-input.cpp  pwm-piezo.cpp  pwm-rgb-led.cpp
3-advanced-programming/: CMakeLists.txt  bootsel-button.cpp  c-plus-plus.cpp  flash.cpp  micropython.py  multicore.cpp
4-advanced-electronics/: ADXL345.cpp  CMakeLists.txt  MCP23008.cpp  MCP23008.h  accelerometer.cpp  output-expander.cpp  raspberry26x32.h  sd-card.cpp  ssd1306_i2c.cpp  ultrasonic.cpp
4-advanced-electronics/sd-library/: CMakeLists.txt  hardware_config.c
4-advanced-electronics/sd-library/src/: rtc.c
5-usb/: CMakeLists.txt  usb-hid.cpp
6-wireless/: CMakeLists.txt
6-wireless/access_point/: CMakeLists.txt  picow_access_point.c
6-wireless/httpd/: CMakeLists.txt  pico_httpd.c
6-wireless/wifi_scan/: CMakeLists.txt  picow_wifi_scan.c
basic-electronics/: CMakeLists.txt  blink-led.cpp  onboard-led.cpp
basic-programming/: CMakeLists.txt  serial-monitor-input.cpp  serial-monitor.cpp
tools/cat-suite/: picotool  pioasm
