add_executable(c-plus-plus c-plus-plus.cpp)
target_link_libraries(c-plus-plus pico_stdlib pico_cyw43_arch_none)
pico_enable_stdio_usb(c-plus-plus 1)
pico_enable_stdio_uart(c-plus-plus 0)
pico_add_extra_outputs(c-plus-plus)

add_executable(multicore multicore.cpp)
target_link_libraries(multicore pico_stdlib pico_cyw43_arch_none pico_multicore)
pico_enable_stdio_usb(multicore 1)
pico_enable_stdio_uart(multicore 0)
pico_add_extra_outputs(multicore)

add_executable(flash flash.cpp)
target_link_libraries(flash pico_stdlib pico_cyw43_arch_none pico_flash)
pico_enable_stdio_usb(flash 1)
pico_enable_stdio_uart(flash 0)
pico_add_extra_outputs(flash)

add_executable(bootsel-button bootsel-button.cpp)
target_link_libraries(bootsel-button pico_stdlib pico_cyw43_arch_none)
pico_enable_stdio_usb(bootsel-button 1)
pico_enable_stdio_uart(bootsel-button 0)
pico_add_extra_outputs(bootsel-button)