add_executable(ssd1306_i2c ssd1306_i2c.cpp)
target_link_libraries(ssd1306_i2c pico_stdlib pico_cyw43_arch_none hardware_i2c)
pico_enable_stdio_usb(ssd1306_i2c 1)
pico_enable_stdio_uart(ssd1306_i2c 0)
pico_add_extra_outputs(ssd1306_i2c)

add_executable(ultrasonic ultrasonic.cpp)
target_link_libraries(ultrasonic pico_stdlib pico_cyw43_arch_none)
pico_enable_stdio_usb(ultrasonic 1)
pico_enable_stdio_uart(ultrasonic 0)
pico_add_extra_outputs(ultrasonic)

add_executable(accelerometer accelerometer.cpp ADXL345.cpp ADXL345.h)
target_link_libraries(accelerometer pico_stdlib pico_cyw43_arch_none hardware_i2c)
pico_enable_stdio_usb(accelerometer 1)
pico_enable_stdio_uart(accelerometer 0)
pico_add_extra_outputs(accelerometer)

add_executable(output-expander output-expander.cpp MCP23x08_registers.h MCP23008.cpp MCP23008.h)
target_link_libraries(output-expander pico_stdlib pico_cyw43_arch_none hardware_i2c)
pico_enable_stdio_usb(output-expander 1)
pico_enable_stdio_uart(output-expander 0)
pico_add_extra_outputs(output-expander)